salesforce_configs/metadata_configurations/retrieveEndpointOutput/objects/Order.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Delivery_Method__c</fullName>
        <formula>TEXT(Opportunity.telia_Billing_Account__r.vlocity_cmt__BillDeliveryMethod__c)</formula>
        <inlineHelpText>If blank, please link the billing account.</inlineHelpText>
        <label>Bill Delivery Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_eMail_Address__c</fullName>
        <formula>Opportunity.telia_Billing_Account__r.vlocity_cmt__BillingEmailAddress__c</formula>
        <label>Billing eMail Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalLogo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractual_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractual Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Sent_On__c</fullName>
        <label>Document Sent On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalLanguage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultibellaCaseGuiId__c</fullName>
        <description>Multibella case GUI Id</description>
        <label>MultibellaCaseGuiId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultibellaCaseId__c</fullName>
        <description>Multibella case ID</description>
        <label>MultibellaCaseId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultibellaDescription__c</fullName>
        <description>Order confirmation html to be sent to Multibella.
Used only in integration - hidden from UI</description>
        <label>MultibellaDescription</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MultibellaError__c</fullName>
        <label>MultibellaError</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultibellaProduct__c</fullName>
        <description>Multibella product name based on order lines lowest priority number
Used only in integration - hidden from UI</description>
        <label>MultibellaProduct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultibellaTopic__c</fullName>
        <inlineHelpText>Comma separated main product names. Max 255 chars
Used only in integration - hidden from UI</inlineHelpText>
        <label>MultibellaTopic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomen_Metro_Ethernet_pricing__c</fullName>
        <description>Metro Ethernet pricing data from availability query; Name=ME (Value examples = ME00, ME11, MEV0, MEV1)</description>
        <inlineHelpText>Metro Ethernet pricing data from availability query; Name=ME (Value examples = ME00, ME11, MEV0, MEV1)</inlineHelpText>
        <label>Nomen Metro Ethernet pricing</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomen_Network_operator__c</fullName>
        <description>Network operator data from availability query; Name=Operator (Value examples = Telia, Elisa, DNA)</description>
        <inlineHelpText>Network operator data from availability query; Name=Operator (Value examples = Telia, Elisa, DNA)</inlineHelpText>
        <label>Nomen Network operator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomen_pricing_area__c</fullName>
        <description>Pricing area information received from availability query; Name: Area (Value examples: ACO, Alue10, Haja, TS, Taajama)</description>
        <inlineHelpText>Pricing area information received from availability query; Name: Area (Value examples: ACO, Alue10, Haja, TS, Taajama)</inlineHelpText>
        <label>Nomen pricing area</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomen_pricing_zone__c</fullName>
        <description>Pricing zone data from availability query; Name=Zone (Value examples = DSL10, DSL11, DSLH1, DSLT1)</description>
        <inlineHelpText>Pricing zone data from availability query; Name=Zone (Value examples = DSL10, DSL11, DSLH1, DSLT1)</inlineHelpText>
        <label>Nomen pricing zone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_to_Order_Order__c</fullName>
        <description>Permission to Order field related to Power of Attorney Management.</description>
        <label>Permission to Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contract_ID__c</fullName>
        <description>SAP contract id (sopimusnumero) used for an order. This is automatically selected based on group billing id.</description>
        <inlineHelpText>SAP contract id (sopimusnumero) used for an order. This is automatically selected based on group billing id.</inlineHelpText>
        <label>SAP Contract ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number__c</fullName>
        <description>Order number with SF prefix used for SAP orders during the simultaneous use of Solita</description>
        <formula>&quot;SF&quot;&amp;OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically generated order number with SF prefix used for SAP orders during the simultaneous use of Solita</inlineHelpText>
        <label>SAP Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a temporary field used to inhibit random test orders to be sent to SAP TSQ. Only orders with this value checked will be prosessed to SAP integration.</description>
        <inlineHelpText>This is a temporary field used to inhibit random test orders to be sent to SAP TSQ. Only orders with this value checked will be prosessed to SAP integration.</inlineHelpText>
        <label>SAP test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Money-New Services</fullName>
                </value>
                <value>
                    <fullName>New Money-Extending Services</fullName>
                </value>
                <value>
                    <fullName>Renegotiation-Service Replacement</fullName>
                </value>
                <value>
                    <fullName>Renegotiation-Service Continuation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telia_Credit_Score_Result__c</fullName>
        <description>This field show credit score result</description>
        <label>Credit Score Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>telia_Amount_Total__c</fullName>
        <formula>telia_One_Time_Total__c + telia_Recurring_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>telia_Bill_Delivery_Method__c</fullName>
        <formula>TEXT(Opportunity.telia_Billing_Account__r.vlocity_cmt__BillDeliveryMethod__c)</formula>
        <inlineHelpText>If blank, please link the billing account.</inlineHelpText>
        <label>Bill Delivery Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Billing_Account__c</fullName>
        <formula>IF(ISBLANK(vlocity_cmt__OpportunityId__r.telia_Billing_Account__r.Name), vlocity_cmt__OpportunityId__r.Account.Name, vlocity_cmt__OpportunityId__r.telia_Billing_Account__r.Name)</formula>
        <label>Billing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Billing_City__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.telia_Billing_City__c</formula>
        <label>Billing Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Billing_Country__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.telia_Billing_Country__c</formula>
        <label>Billing Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Billing_Pcode__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.telia_Billing_Pcode__c</formula>
        <label>Billing Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Billing_Street__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.telia_Billing_Street__c</formula>
        <label>Billing Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Connection_ID__c</fullName>
        <description>Customer&apos;s Connection ID</description>
        <label>Connection ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Contact)</relationshipLabel>
        <relationshipName>Related_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Contract_period__c</fullName>
        <description>Duration of the contract period</description>
        <label>Contract period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>For now</fullName>
                    <default>true</default>
                    <label>For now</label>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Credit_Score_Approval__c</fullName>
        <description>This field is used to store the Approval Status from the related Quote</description>
        <label>Credit Score Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Credit_Score_Timestamp__c</fullName>
        <label>Credit Score Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>telia_Credit_Score_short__c</fullName>
        <description>This field contains the &apos;short version&apos; of the credit score received from an external database</description>
        <label>Credit Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Delivery_Type__c</fullName>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>normal</label>
                </value>
                <value>
                    <fullName>express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Desired_Installation_Date__c</fullName>
        <description>Must be a working day and at minimum the next working day.</description>
        <label>Desired Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>telia_FYR_book_value__c</fullName>
        <label>FYR Total</label>
        <summarizedField>OrderItem.telia_FYR_book_value__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>telia_Group_Billing_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group Billing ID number</description>
        <label>Group Billing ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>telia_Group_Billing_ID__c.telia_Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>telia_Group_Billing_ID__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Investment_ID__c</fullName>
        <formula>Opportunity.telia_Investment_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>telia_Manual_Availability_Check_ID__c</fullName>
        <formula>Opportunity.telia_Manual_Availability_Check_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manual Availability Check ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>telia_Monthly_Charge_Exc_Reporting__c</fullName>
        <label>Monthly Charge(Exc. Reporting)</label>
        <summarizedField>OrderItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.telia_Reporting_Product__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>telia_Non_Salesforce_Service_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Salesforce Service Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>telia_One_Time_Charge_Exc_Reporting__c</fullName>
        <label>One Time Charge(Exc Reporting)</label>
        <summarizedField>OrderItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.telia_Reporting_Product__c</field>
            <operation>notEqual</operation>
            <value>&quot;1&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>telia_One_Time_Total__c</fullName>
        <inlineHelpText>One Time Charges</inlineHelpText>
        <label>One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>telia_Order_ID__c</fullName>
        <displayFormat>{YYYY}{MM}{0000000000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>telia_Order_SF_ID__c</fullName>
        <formula>Id</formula>
        <label>Order SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Project_ID__c</fullName>
        <description>Customer&apos;s Project ID</description>
        <label>Project ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Recurring_Total__c</fullName>
        <inlineHelpText>Monthly Recurring Charge</inlineHelpText>
        <label>Monthly Charge Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>telia_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telia</fullName>
                    <default>true</default>
                    <label>Telia</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Revenue_Total_Rollup__c</fullName>
        <label>Revenue Total</label>
        <summarizedField>OrderItem.telia_FYR_opp_value__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.vlocity_cmt__ParentItemId__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>telia_Service_Account__c</fullName>
        <formula>IF(ISBLANK(vlocity_cmt__OpportunityId__r.telia_Service_Account__r.Name), vlocity_cmt__OpportunityId__r.Account.Name, vlocity_cmt__OpportunityId__r.telia_Service_Account__r.Name)</formula>
        <label>Service Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_Address__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.telia_Service_Address__c</formula>
        <label>Service Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_Agreement_Status__c</fullName>
        <formula>IF(ISBLANK( vlocity_cmt__OpportunityId__r.telia_Service_Agreement__c ) &amp;&amp; telia_Non_Salesforce_Service_Agreement__c = false, &quot;Not Valid&quot;, 
IF(NOT(ISBLANK( vlocity_cmt__OpportunityId__r.telia_Service_Agreement__c )) &amp;&amp; telia_Non_Salesforce_Service_Agreement__c = false, &quot;Valid&quot;, &quot;Valid (External)&quot;))</formula>
        <label>Service Agreement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_City__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.telia_Service_City__c</formula>
        <label>Service Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_Country__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.telia_Service_Country__c</formula>
        <label>Service Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_Pcode__c</fullName>
        <formula>vlocity_cmt__OpportunityId__r.telia_Service_Pcode__c</formula>
        <label>Service Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Solita_System_Number__c</fullName>
        <description>The number should be unique and total length of String resulting from this auto number should be no longer than 9 characters.</description>
        <displayFormat>SF{0000000}</displayFormat>
        <label>Solita System Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>TEXT(Account.vlocity_cmt__vSLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingName__c</fullName>
        <description>Text to enter billing contact</description>
        <label>Billing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CreatedByAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Delivery_Installation_Status__c</fullName>
        <label>Delivery Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Discount__c</fullName>
        <description>Manual discount for entire order</description>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective Total: One Time Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOrderTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c +  vlocity_cmt__Tax__c  +( vlocity_cmt__EffectiveRecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Total: Monthly Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this order</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentStatus__c</fullName>
        <inlineHelpText>Fulfilment Status</inlineHelpText>
        <label>Fulfilment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if order requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSyncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyInterval__c</fullName>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardyStatus__c</fullName>
        <formula>IF( (ISBLANK(vlocity_cmt__RequestedCompletionDate__c) || vlocity_cmt__RequestedCompletionDate__c == null) || (ISBLANK(vlocity_cmt__DueDate__c) || vlocity_cmt__DueDate__c == null), &apos;Green&apos;, IF((vlocity_cmt__RequestedCompletionDate__c &gt; vlocity_cmt__DueDate__c), &apos;Green&apos;, IF((ISBLANK(vlocity_cmt__JeopardySafetyInterval__c) || vlocity_cmt__JeopardySafetyInterval__c == null), &apos;Red&apos;, IF((vlocity_cmt__DueDate__c - vlocity_cmt__RequestedCompletionDate__c &gt; vlocity_cmt__JeopardySafetyInterval__c), &apos;Red&apos;, &apos;Yellow&apos;) ) ) )</formula>
        <label>Jeopardy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MasterOrderName__c</fullName>
        <label>Master Order Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number of Contract Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>Total: One Time Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrchestrationPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Plan</label>
        <referenceTo>vlocity_cmt__OrchestrationPlan__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderGroup__c</fullName>
        <label>Order Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c +  vlocity_cmt__Tax__c  +( vlocity_cmt__RecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                    <default>true</default>
                    <label>Call Center</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the contract from which this order was created</description>
        <label>Originating Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Pricebook__c</fullName>
        <formula>Pricebook2.Name</formula>
        <label>Pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToCity__c</fullName>
        <label>Quote To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToCountry__c</fullName>
        <label>Quote To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToName__c</fullName>
        <label>Quote To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToPostalCode__c</fullName>
        <label>Quote To Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToState__c</fullName>
        <label>Quote To State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteToStreet__c</fullName>
        <label>Quote To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Total: Monthly Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequestDate__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
</CustomObject>